# contextlens

./: .gitignore  README.md  benchmark.py  pyproject.toml  rag_benchmark.py  rag_eval.py  rejudge.py
benchmarks/: eval.py  industry_benchmark.py  industry_benchmark_v2.py  industry_results.json  industry_results_v2.json  results.md
contextlens/: .gitignore.txt  __init__.py  core.py  router.py  state_compiler.py  stats.py  test_router.py  test_semantic.py  test_triage.py  triage.py  wrap.py
contextlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ctxlens/: __init__.py
ctxlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extension/: background.js  content.js  content.js.bak  injector.js  manifest.json  popup.html  popup.js  privacy.html  welcome.html
server/: main.py  main.py.backup
stats/: 53136271c432.json
tests/: test_core.py
