[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxlens"
version = "1.0.3"
description = "The context compression protocol for LLM inference. Eliminate 93% token redundancy in one line."
readme = "README.md"
authors = [{name = "Usama Fateh Ali", email = "alifateh0919@gmail.com"}]
keywords = ["llm", "tokens", "compression", "context", "anthropic", "openai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
full = [
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Usama1909/contextlens"
Repository = "https://github.com/Usama1909/contextlens"
Issues = "https://github.com/Usama1909/contextlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextlens*"]

[tool.setuptools]
license-files = []
